--- a/Pipline_model/test/Dockerfile
+++ b/Pipline_model/test/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.7-slim
+#FROM python:3.7-slim
+FROM d1v1n3/train-pipline-dtro-2
 
 WORKDIR /app
 
@@ -8,6 +9,8 @@ COPY test.py ./test.py
 
 COPY requirements.txt ./requirements.txt
 
-RUN pip install -r requirements.txt
+#RUN pip install tensorflow tensorflow-gpu
+
+#RUN pip install -r requirements.txt
 
 ENTRYPOINT [ "python", "test.py" ]
