--- a/Pipline_model/deploy_model/Dockerfile
+++ b/Pipline_model/deploy_model/Dockerfile
@@ -4,4 +4,8 @@ WORKDIR /app
 
 COPY deploy_model.py ./deploy_model.py
 
+COPY push.py ./push.py
+
+RUN pip install pygithub
+
 ENTRYPOINT [ "python", "deploy_model.py" ]
